Styling the main content/whole content of the page in '/styles/app.css'

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,3 +10,44 @@ h1{
 h2{
     font-size: 31px;
 }
+
+/* MAIN */
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height:100vh;
+    background-color: #F4D6CC;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height:80%;
+}
+.player1{
+    color :rgb(198, 0, 0);
+}
+.player2{
+    color: rgb(164, 164, 0);
+}
+.board{
+    width:40%;
+    height: 30%;;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+.tile{
+    /* font-color to hide value inside the tile */
+    color: #F4D6CC;
+    border: 0.5px solid rgb(99, 99, 99);
+    cursor: pointer;
+}
+.reset-btn{
+    padding:7px 30px;
+    border-radius:5px;
+    background-color: transparent;
+    font-size:16px;
+}
