--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,6 +54,7 @@ main {
   border-radius: 5px;
   background-color: transparent;
   font-size: 16px;
+  cursor: pointer;
 }
 
 /* Tiles interaction for ---JS---: */
@@ -79,9 +80,6 @@ main {
 }
 .yellowTitle {
   color: #f9cf03;
-}
-.gameOver {
-  cursor: none;
 }
 .redBg {
   background-color: #ff030b;
